[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Body.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Face.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover_Bot.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover_Top.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Head.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Head_Hover.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Pawns/Pawn_04_Parts/Pawn_04_Pic.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Part_Arm.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_04_Body/Pawn_04_Hover/Pawn_04_Hover_Bot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 5, 4, 5, 6, 4, 5, 7, 6, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_04_Body/Pawn_04_Hover:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.0, -8.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_04_Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -31 ), Vector2( 0, -29 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_04_Body/Pawn_04_Part_Arm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 23.8, 47.6 ]
}

[node name="Pawn_04_Pic" type="Node2D"]
script = ExtResource( 8 )

[node name="Pawn_04_Body" type="Sprite" parent="."]
position = Vector2( 0, -30.7035 )
texture = ExtResource( 2 )

[node name="Pawn_04_Head_Hover" type="Sprite" parent="Pawn_04_Body"]
show_behind_parent = true
position = Vector2( 0, -6 )
texture = ExtResource( 7 )

[node name="Pawn_04_Hover_Top" type="Sprite" parent="Pawn_04_Body"]
show_behind_parent = true
position = Vector2( 0, 6 )
texture = ExtResource( 5 )

[node name="Pawn_04_Hover" type="Sprite" parent="Pawn_04_Body"]
rotation = 0.109328
texture = ExtResource( 1 )
offset = Vector2( 0, 10 )

[node name="Pawn_04_Hover_Bot" type="Sprite" parent="Pawn_04_Body/Pawn_04_Hover"]
position = Vector2( 0, 20 )
texture = ExtResource( 4 )
hframes = 9
frame = 6

[node name="Pawn_04_Head" type="Sprite" parent="Pawn_04_Body"]
position = Vector2( 0, -9 )
texture = ExtResource( 6 )
hframes = 3

[node name="Pawn_04_Face" type="Sprite" parent="Pawn_04_Body/Pawn_04_Head"]
texture = ExtResource( 3 )

[node name="Pawn_04_Part_Arm" type="Sprite" parent="Pawn_04_Body"]
position = Vector2( 0, -1 )
rotation = 0.559082
texture = ExtResource( 9 )
offset = Vector2( 12, 4 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
